--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+section.aboutUs li {
+    background-color: rgba(165, 42, 42, 0.7);
+    color: aliceblue;
+    margin: 0 10%;
+}
+
+body.aboutUs {
+    background-color:rgba(128,128,128,0.2);
+}
+
+h2.aboutUs{
+    color: white;
+}
+
+section {
+    margin: 0 20px 75px;
+}
+
 footer {
     position: fixed;
     width: 100%;
