--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
+ul.aboutUs{
+    padding: 0;
+}
+
 section.aboutUs li {
     background-color: rgba(165, 42, 42, 0.7);
     color: aliceblue;
-    margin: 0 10%;
+    margin: 0 clamp(5%, 15%, 25%);
+    /* text-align: center; */
+    align-items: center;
+    list-style: none;
+    padding: 15px 0px;
+}
+
+#coreValues  {
+    text-align: center;
 }
 
 body.aboutUs {
@@ -9,7 +21,8 @@ body.aboutUs {
 }
 
 h2.aboutUs{
-    color: white;
+    text-align: center;
+    padding-bottom: 5px;
 }
 
 section {
@@ -31,7 +44,7 @@ footer ul {
     position: absolute;
     display: inline-flex;
     align-self: center;
-    top: 10px;
+    top: -5px;
     padding-left: 5px;
 }
 footer li {
