--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,70 @@
-ul.aboutUs{
+body {
+    margin: 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
     padding: 0;
+    overflow: hidden;
+    background-color: rgb(199, 194, 194);
+}
+  
+nav li {
+    float: left;
+}
+  
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-weight: bold;
+}
+  
+nav li a:hover {
+    background-color: rgb(83, 80, 80);
+    color: white;
+}
+
+nav ul.aboutUs{
+    padding: 0;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+    padding-bottom: 2%;
+}
+
+header img {
+    width: 100%;
+    height: 400px;
+}
+
+header h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.row {
+    display: flex;
+}
+  
+.column {
+    flex: 50%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+@media (min-width: 1000px) {
+    .column h2 {
+        padding-left: 25%;
+    }
 }
 
 section.aboutUs li {
