--- a/css/awards.css
+++ b/css/awards.css
@@ -1,5 +1,5 @@
 h2 {
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 h3 {
@@ -14,6 +14,7 @@ section img{
     border-radius: 50%;
     float: left;
     align-items: center;
+    padding: 15px;
 }
 
 div.awardsCard {
@@ -22,7 +23,7 @@ div.awardsCard {
     /* margin: 0 10% 0 30%; */
     width: 60%;
     right: 30%;
-    margin: 25px 0;
+    margin: 25px 19%;
     box-shadow: 5px 5px 5px black;
 }
 
