--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(199, 194, 194);
+    background-color: rgb(81, 121, 147);
 }
   
 nav li {
@@ -26,10 +26,11 @@ nav li a {
     padding: 14px 16px;
     text-decoration: none;
     font-weight: bold;
+    font-family: sans-serif;
 }
   
 nav li a:hover {
-    background-color: rgb(83, 80, 80);
+    background-color: rgb(107, 151, 178);
     color: white;
 }
 
@@ -47,17 +48,16 @@ header img {
 
 header h1 {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 70px;
 }
 
 h2 {
     font-family: 'Amatic SC'; font-size: 40px;
     color: #636363;
     text-align: center;
-    border-bottom: 2px solid var(--grey);
-    border-width: 10%;
     margin: 0 clamp(5%, 10%, 20%);
 }
 
@@ -73,7 +73,7 @@ h2 {
 
 @media (min-width: 1000px) {
     .column h2 {
-        padding-left: 25%;
+        padding-left: 2%;
     }
 }
 
@@ -82,10 +82,10 @@ section {
 }
 
 footer {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 50px;
-    background-color: brown;
+    background-color: rgb(81, 121, 147);
     color: antiquewhite;
     left: 0;
     bottom: 0;
@@ -117,10 +117,6 @@ footer img {
     top: 10px;
 }
 
-form .name {
-    width: 20%;
-}
-
-form #email {
-    width: 40%;
+p {
+    font-family: sans-serif;
 }
